# create-forma-app

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml  update-core-dep.yml
src/: index.ts
templates/dashboard/: Cargo.toml  README.md
templates/dashboard/admin/: build.ts  package-lock.json  package.json  playwright.config.ts
templates/dashboard/admin/src/: app.tsx
templates/dashboard/admin/src/components/: Badge.tsx  Card.tsx  Icon.tsx  ProgressBar.tsx  StatCard.tsx  StatusBadge.tsx  UserAvatar.tsx  icons.ts
templates/dashboard/admin/src/home/: HomeIsland.ts  HomeIsland.tsx  app.ts
templates/dashboard/admin/src/islands/: ActivityFeed.tsx  DataTable.tsx  Sidebar.tsx  StatsCards.tsx
templates/dashboard/admin/src/lib/: api.ts  format.ts
templates/dashboard/admin/src/pages/: DeploymentsPage.tsx  OverviewPage.tsx  ServersPage.tsx  SettingsPage.tsx
templates/dashboard/admin/src/styles/: dashboard.css
templates/dashboard/admin/tests/: dashboard.spec.ts
templates/dashboard/src/: data.rs  main.rs
templates/minimal/: README.md
templates/minimal/admin/: build.ts  package.json  tsconfig.json
templates/minimal/admin/src/home/: HomeIsland.ts  HomeIsland.tsx  app.ts  store.ts
templates/minimal/src/: main.rs
tests/: cli.test.ts
