[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
forma-ir = "0.1"
forma-server = "0.1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
